--- a/test/fixtures/identities.yml
+++ b/test/fixtures/identities.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  token: MyString
+  hash: MyString
   user: one
 
 two:
-  token: MyString
+  hash: MyString
   user: two
